# cordovabuilder-admin-python

./: .active-env.json  .dockerignore  .env.example  .gitignore  COMPLETE_FIX_SUMMARY.md  DOKCER_README.md  Dockerfile  ENV_FIX_FINAL.md  ENV_SETUP_GUIDE.md  EXTRACTION_FIX_GUIDE.md  QUICKSTART.md  README.md  SCRIPT_IMPROVEMENTS.md  USE.md  docker-compose.yml  pyproject.toml  start-container.sh
app/: main.py
app/api/v1/: environment.py
app/configs/: env_presets.json
app/services/: active_env_config_service.py  env_script_executor_service.py
client/: index.html
client/assets/: index-BrUrE10w.css  index-CjB6l7-H.js
docs/: DOCKERFILE_SIMPLIFICATION.md  DOCKER_CONFIG_CHECK.md  DOCKER_IMAGE_CHECK_REPORT.md  DOCKER_QUICKSTART.md  DOCKER_QUICK_REFERENCE.md  ENVIRONMENT_API.md  ENV_CONFIG_API.md  c11.md  c14.md
scripts/: activate-cordova-env.sh  android_sdk_manager.sh  setup_cordova_env.sh  test_extraction.sh
server/: .env  README.md  start-container.sh
server/app/: __init__.py
server/app/api/v1/: environment.py
server/app/configs/: env_presets.json
server/app/services/: env_script_executor_service.py
server/scripts/: setup_cordova_env.sh
shells/: apk-automatic-v2.sh  apk-init.sh  sdk-check.sh
workspace/v12/: apk-build-sign-v2.sh  build.json  config.xml  myApp12.p12  package-lock.json  package.json
workspace/v15/: apk-build-sign-v2.sh  build.json  config.xml  gradle-clean.sh  myApp15.p12  package-lock.json  package.json
