# Poetry 项目配置文件
# CordovaBuilder Admin API - Python 版本的项目依赖和构建配置

[tool.poetry]
name = "cordovabuilder-admin"  # 项目名称
version = "0.1.0"  # 项目版本号
description = "CordovaBuilder Admin API - Python Version"  # 项目描述
authors = ["games.gong <games.gong@pbn.com.cn>"]  # 作者信息
readme = "README.md"  # README 文件路径
package-mode = false  # 禁用包模式,仅作为应用使用

# 生产环境依赖
[tool.poetry.dependencies]
python = "^3.10"  # Python 版本要求: 3.10 及以上
fastapi = "^0.115.0"  # FastAPI Web 框架,用于构建 RESTful API
uvicorn = {extras = ["standard"], version = "^0.32.0"}  # ASGI 服务器,用于运行 FastAPI 应用
pydantic-settings = "^2.6.0"  # Pydantic 配置管理,用于环境变量和配置文件管理
loguru = "^0.7.2"  # 日志库,提供简洁的日志记录功能
httpx = "^0.27.0"  # 异步 HTTP 客户端,用于下载文件
aiofiles = "^24.1.0"  # 异步文件操作库
python-multipart = "^0.0.12"  # 支持 multipart/form-data 表单数据解析
python-dotenv = "^1.2.2"  # 从 .env 文件加载环境变量

# 开发环境依赖
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"  # 测试框架
pytest-asyncio = "^0.24.0"  # pytest 异步测试支持
black = "^24.10.0"  # 代码格式化工具
flake8 = "^7.1.0"  # 代码风格检查工具

# 构建系统配置
[build-system]
requires = ["poetry-core"]  # 构建系统依赖
build-backend = "poetry.core.masonry.api"  # 构建后端